# BP-Templates

./: .gitignore  .gitmodules  Makefile  Makefile.common  README.md
BP-Init/: Makefile.configure
BP-Init/.github/workflows/: CD.yml  CI.yml
Init safe copy/: .gitignore  Makefile  README.md
Init safe copy/.github/workflows/: CI-CD.yml  Makefile.cicd  deploy.yml
Init safe copy/docs/source/: index.rst
make/: Makefile.base
templates/: Makefile  Makefile.common
templates/dbt/: cookiecutter.json
templates/dbt/{{cookiecutter.repo_name}}/: .pre-commit-config.yml  .sqlfluff  .sqlfluffignore  Dockerfile  Makefile.specific  README.md  dbt_project.yml  packages.yml  profiles.yml  requirements.txt
templates/dbt/{{cookiecutter.repo_name}}/.github/workflows/: CD.yml  CI.yml
templates/dbt/{{cookiecutter.repo_name}}/dags/: generate_dbt_dag.py
templates/django/: cookiecutter.json
templates/django/{{cookiecutter.project_name}}/: .env  .pre-commit-config.yml  .pylintrc  Dockerfile  Makefile.specific  README.md  docker-compose.yml  nginx.default  prospector.yml  pyproject.toml  setup.cfg  start-server.sh
templates/django/{{cookiecutter.project_name}}/.github/workflows/: CD.yml  CI.yml  Makefile.cicd
templates/django/{{cookiecutter.project_name}}/docs/source/: api.rst  index.rst
templates/django/{{cookiecutter.project_name}}/scripts/: entrypoint.sh
templates/django/{{cookiecutter.project_name}}/tests/: test_hello_world.py
templates/django/{{cookiecutter.project_name}}/{{cookiecutter.api_name}}/: __init__.py  asgi.py  manage.py  wsgi.py
templates/django/{{cookiecutter.project_name}}/{{cookiecutter.api_name}}/{{cookiecutter.api_name}}/: asgi.py  settings.py  urls.py  wsgi.py
templates/django/{{cookiecutter.repo_name}}/: .pylintrc  Dockerfile  docker-compose.yml  manage.py  setup.cfg
templates/django/{{cookiecutter.repo_name}}-project/tests/: test_hello_world.py
templates/django/{{cookiecutter.repo_name}}-project/{{cookiecutter.repo_name}}/: urls.py
templates/django/{{cookiecutter.repo_name}}/scripts/: entrypoint.sh
templates/django/{{cookiecutter.repo_name}}/tests/: test_hello_world.py
templates/django/{{cookiecutter.repo_name}}/{{cookiecutter.api_name}}/: settings.py  urls.py
templates/django/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: asgi.py  settings.py  urls.py  wsgi.py
templates/package/: cookiecutter.json
templates/package/{{cookiecutter.repo_name}}/: .pre-commit-config.yml  .pylintrc  Dockerfile  Makefile.specific  README.md  requirements.txt  setup.cfg
templates/package/{{cookiecutter.repo_name}}/.github/workflows/: CI.yml  Makefile.cicd
templates/package/{{cookiecutter.repo_name}}/docs/source/: api.rst  conf.py
templates/package/{{cookiecutter.repo_name}}/tests/: test_hello_world.py
templates/package/{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/: __init__.py  utils.py
templates/python/: cookiecutter.json
templates/python/{{cookiecutter.repo_name}}/: file.txt
templates/tool/: cookiecutter.json
