[options]
include_package_data = true
install_requires =
    loguru
    build
    twine
    commitizen
    pre-commit
    allure-pytest
    allure-pytest-bdd
    black
    build
    commitizen
    cruft
    furo
    isort
    pip-tools
    pre-commit
    prospector[with_everything]
    pytest
    pytest-bdd
    pytest-codecov
    pytest-cov
    sphinx
    sphinx-autodoc-typehints
    twine
    black
    isort
    cruft
    prospector[with_everything]
    allure-pytest
    allure-pytest-bdd
    pytest
    pytest-bdd
    pytest-codecov
    pytest-cov
    django
packages = find:
py_modules =
setup_requires =
    setuptools

[options.entry_points]
console_scripts =
