[options]
include_package_data = true
install_requires =
    loguru
    build
    twine
    commitizen
    pre-commit
    allure-pytest
    allure-pytest-bdd
    black
    build
    commitizen
    cruft
    furo
    isort
    pip-tools
    pre-commit
    prospector[with_everything]
    pytest
    pytest-bdd
    pytest-codecov
    pytest-cov
    sphinx
    sphinx-autodoc-typehints
    pytest
    flake8==4.0.1  # https://github.com/PyCQA/prospector/issues/515
packages = find:
py_modules =
setup_requires =
    setuptools

[options.entry_points]
console_scripts =
